add some Huber loss stuff

--- a/writeup/BombScargle.tex
+++ b/writeup/BombScargle.tex
@@ -154,7 +154,7 @@ One way to address this is to soften these tails for distant points. Huber (1963
   \rho_H(y_i|y,c) = \left\{
   \begin{array}{ll}
     \frac{1}{2}t^2; & |t| \le c \\
-    c|t| - \frac{1}{2}t^2; & |t| > c
+    c|t| - \frac{1}{2}c^2; & |t| > c
   \end{array}
   \right.
 \end{equation}
